@@ -1,0 +1,9 @@
+[tox]
+envlist = py37
+
+[testenv]
+deps =
+    discover
+    unittest_data_provider
+
+commands = python -m unittest tunman.test
